High RAM usage by Surface smooth brush. #75121

Closed
opened 2020-03-27 10:17:13 +01:00 by Max Lions · 4 comments

System Information
Operating system:Windows 8
Graphics card:AMD Radeon HD 7350

Blender Version
2.83 Alpha
Date:2020-03-27 00:47
Hash:e1ee4dff8d65

Short description of error
Surface smooth brush consumes a lot of RAM compared to other brushes and Surface Smooth filter.

Exact steps for others to reproduce the error
Go to sculpt mod with default cube. Remesh it with ctrl+r. Select smooth brush. Set it's deformation to Surface. Then use it on cube. The more area of object smoothed, the more difference in RAM usage.
On this cube what have 2.5k polys it can use tens Mib's of RAM. On 1 million polys it uses a hundreds of MiBs and up to Gigs.

**System Information** Operating system:Windows 8 Graphics card:AMD Radeon HD 7350 **Blender Version** 2.83 Alpha Date:2020-03-27 00:47 Hash:e1ee4dff8d65 **Short description of error** **Surface smooth** brush consumes a lot of RAM compared to other brushes and **Surface Smooth** filter. **Exact steps for others to reproduce the error** Go to sculpt mod with default cube. Remesh it with ctrl+r. Select smooth brush. Set it's deformation to Surface. Then use it on cube. The more area of object smoothed, the more difference in RAM usage. On this cube what have 2.5k polys it can use tens Mib's of RAM. On 1 million polys it uses a hundreds of MiBs and up to Gigs.
Author

Added subscriber: @aMagnus

Added subscriber: @aMagnus
Pablo Dobarro self-assigned this 2020-03-27 13:54:23 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 6cc4c68dad

This issue was referenced by 6cc4c68dad795a4ac63e06a1d63a1865f74210bd
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75121
No description provided.